--- a/css/beranda_style.css
+++ b/css/beranda_style.css
@@ -1,5 +1,8 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Outfit', sans-serif;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -9,7 +12,7 @@ body {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .beranda .div {
@@ -191,7 +194,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-13 {
+.beranda .text-wrapper-12 {
   top: 3px;
   position: absolute;
   left: 0;
@@ -268,7 +271,6 @@ body {
   line-height: normal;
 }
 
-/*
 /* Content Beranda */
 .beranda .introduction {
   position: absolute;
@@ -647,4 +649,10 @@ body {
   padding: 10px;
   background-size: 100% 100%;
   border-radius: 20px;
+}
+
+@media only screen and (max-width: 620px) {
+  .beranda {
+    width: 100%;
+  }
 }
