Fix css + change overflow to auto

--- a/css/beranda_style.css
+++ b/css/beranda_style.css
@@ -15,14 +15,14 @@ body {
   overflow: auto;
 }
 
-.beranda .div {
+.div {
   background-color: #ffffff;
   width: 1440px;
   height: 3200px;
   position: relative;
 }
 
-.beranda .footer {
+.footer {
   position: absolute;
   width: 1440px;
   height: 252px;
@@ -30,7 +30,7 @@ body {
   left: 0;
 }
 
-.beranda .footer-2 {
+.footer-2 {
   position: absolute;
   width: 1227px;
   height: 182px;
@@ -38,7 +38,7 @@ body {
   left: 113px;
 }
 
-.beranda .menu {
+.menu {
   width: 297px;
   height: 182px;
   left: 304px;
@@ -46,7 +46,7 @@ body {
   top: 0;
 }
 
-.beranda .text-wrapper {
+.text-wrapper {
   position: absolute;
   width: 287px;
   top: 0;
@@ -58,7 +58,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-2 {
+.text-wrapper-2 {
   position: absolute;
   width: 287px;
   top: 48px;
@@ -70,7 +70,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-3 {
+.text-wrapper-3 {
   position: absolute;
   width: 287px;
   top: 122px;
@@ -82,7 +82,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-4 {
+.text-wrapper-4 {
   position: absolute;
   width: 287px;
   top: 85px;
@@ -95,7 +95,7 @@ body {
   text-decoration: underline;
 }
 
-.beranda .text-wrapper-5 {
+.text-wrapper-5 {
   position: absolute;
   width: 287px;
   top: 159px;
@@ -107,7 +107,7 @@ body {
   line-height: normal;
 }
 
-.beranda .logo {
+.logo {
   width: 133px;
   height: 145px;
   top: 14px;
@@ -115,7 +115,7 @@ body {
   left: 0;
 }
 
-.beranda .text-wrapper-6 {
+.text-wrapper-6 {
   position: absolute;
   width: 129px;
   top: 40px;
@@ -127,7 +127,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-7 {
+.text-wrapper-7 {
   top: 0;
   position: absolute;
   left: 0;
@@ -139,7 +139,7 @@ body {
   white-space: nowrap;
 }
 
-.beranda .menu-2 {
+.menu-2 {
   width: 297px;
   height: 182px;
   left: 622px;
@@ -147,7 +147,7 @@ body {
   top: 0;
 }
 
-.beranda .text-wrapper-8 {
+.text-wrapper-8 {
   position: absolute;
   width: 287px;
   top: 85px;
@@ -159,7 +159,7 @@ body {
   line-height: normal;
 }
 
-.beranda .menu-3 {
+.menu-3 {
   width: 295px;
   height: 145px;
   left: 940px;
@@ -167,7 +167,7 @@ body {
   top: 0;
 }
 
-.beranda .nav-bar {
+.nav-bar {
   position: absolute;
   width: 1240px;
   height: 50px;
@@ -175,7 +175,7 @@ body {
   left: 100px;
 }
 
-.beranda .logo-2 {
+.logo-2 {
   width: 368px;
   height: 35px;
   top: 7px;
@@ -183,7 +183,7 @@ body {
   left: 0;
 }
 
-.beranda .logo-linda {
+.logo-linda {
   position: absolute;
   top: 0;
   left: 62px;
@@ -194,7 +194,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-12 {
+.text-wrapper-12 {
   top: 3px;
   position: absolute;
   left: 0;
@@ -206,7 +206,7 @@ body {
   white-space: nowrap;
 }
 
-.beranda .group {
+.group {
   position: absolute;
   width: 485px;
   height: 27px;
@@ -214,7 +214,7 @@ body {
   left: 541px;
 }
 
-.beranda ul {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -226,17 +226,17 @@ body {
   margin-left: 100px;
 }
 
-.beranda li {
+li {
   float: left;
 }
 
-.beranda li a {
+li a {
   color: #8B8BA5;
   text-align: center;
   text-decoration: none;
 }
 
-.beranda li a:hover:not(.active) {
+li a:hover:not(.active) {
   color: #FBE0DC;
 }
 
@@ -244,11 +244,11 @@ body {
   color: #272042;
 }
 
-.beranda li a:hover, li a.active {
+li a:hover, li a.active {
   color: #FBE0DC;
 }
 
-.beranda .text-wrapper-14 {
+.text-wrapper-14 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -260,7 +260,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-15 {
+.text-wrapper-15 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -273,7 +273,7 @@ body {
 }
 
 /* Content Beranda */
-.beranda .introduction {
+.introduction {
   position: absolute;
   width: 1225px;
   height: 405px;
@@ -281,14 +281,14 @@ body {
   left: 89px;
 }
 
-.beranda .overlap-5 {
+.overlap-5 {
   position: absolute;
   width: 600px;
   height: 140px;
   left: 698px;
 }
 
-.beranda .eat-what-you-cook {
+.eat-what-you-cook {
   position: absolute;
   font-weight: 700;
   color: #272042;
@@ -298,7 +298,7 @@ body {
   top: -10px;
 }
 
-.beranda .when-you-eat {
+.when-you-eat {
   position: absolute;
   width: 550px;
   top: 150px;
@@ -310,14 +310,14 @@ body {
   line-height: 34px;
 }
 
-.beranda .video {
+.video {
   position: absolute;
   width: 600px;
   height: 350px;
   background-size: 100% 100%;
 }
 
-.beranda .img-eat {
+.img-eat {
   position: absolute;
   width: 600px;
   height: 350px;
@@ -325,7 +325,7 @@ body {
   border-radius: 20px;
 }
 
-.beranda .banner {
+.banner {
   position: absolute;
   width: 1260px;
   height: 382px;
@@ -333,7 +333,7 @@ body {
   left: 90px;
 }
 
-.beranda .frame-5 {
+.frame-5 {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -342,7 +342,7 @@ body {
   position: relative;
 }
 
-.beranda .text-wrapper-28 {
+.text-wrapper-28 {
   top: 13px;
   left: 54px;
   position: absolute;
@@ -355,7 +355,7 @@ body {
   line-height: normal;
 }
 
-.beranda .foto-makanan {
+.foto-makanan {
   display: flex;
   width: 1260px;
   align-items: center;
@@ -366,14 +366,14 @@ body {
   left: 0;
 }
 
-.beranda .pic-makanan {
+.pic-makanan {
   position: relative;
   width: 400px;
   height: 263px;
   border-radius: 20px;
 }
 
-.beranda .frame {
+.frame {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -408,7 +408,7 @@ body {
   background-color: #AA8E1C;
 }
 
-.beranda .katalog-menu {
+.katalog-menu {
   position: absolute;
   width: 1260px;
   height: 900px;
@@ -416,12 +416,12 @@ body {
   left: 90px;
 }
 
-.beranda .katalog-menu-2 {
+.katalog-menu-2 {
   position: relative;
   height: 834px;
 }
 
-.beranda .frame-2 {
+.frame-2 {
   display: inline-flex;
   align-items: flex-start;
   gap: 100px;
@@ -430,13 +430,13 @@ body {
   left: 0;
 }
 
-.beranda .minuman {
+.minuman {
   position: relative;
   width: 585.32px;
   height: 612px;
 }
 
-.beranda .frame-3 {
+.frame-3 {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -446,13 +446,13 @@ body {
   top: 550px;
 }
 
-.beranda .rectangle-5 {
+.rectangle-5 {
   position: relative;
   width: 210px;
   height: 50px;
 }
 
-.beranda .text-wrapper-23 {
+.text-wrapper-23 {
   top: 12px;
   left: 43px;
   position: absolute;
@@ -465,7 +465,7 @@ body {
   line-height: normal;
 }
 
-.beranda .text-wrapper-24 {
+.text-wrapper-24 {
   position: absolute;
   top: 382px;
   font-weight: 700;
@@ -476,7 +476,7 @@ body {
   white-space: nowrap;
 }
 
-.beranda .text-wrapper-25 {
+.text-wrapper-25 {
   position: absolute;
   width: 550px;
   top: 430px;
@@ -487,7 +487,7 @@ body {
   line-height: 34px;
 }
 
-.beranda .pic-3 {
+.pic-3 {
   position: absolute;
   width: 581px;
   height: 373px;
@@ -496,20 +496,20 @@ body {
   border-radius: 20px;
 }
 
-.beranda .makanan-ringan {
+.makanan-ringan {
   position: relative;
   width: 585.32px;
   height: 612px;
   margin-right: -4px;
 }
 
-.beranda .rectangle-6 {
+.rectangle-6 {
   width: 241px;
   position: relative;
   height: 50px;
 }
 
-.beranda .text-wrapper-26 {
+.text-wrapper-26 {
   position: absolute;
   top: 12px;
   left: 26px;
@@ -522,13 +522,13 @@ body {
   line-height: normal;
 }
 
-.beranda .frame-4 {
+.frame-4 {
   position: absolute;
   width: 329px;
   height: 90px;
 }
 
-.beranda .text-wrapper-27 {
+.text-wrapper-27 {
   position: absolute;
   top: 9px;
   left: 10px;
@@ -540,7 +540,7 @@ body {
   white-space: nowrap;
 }
 
-.beranda .slogan {
+.slogan {
   position: absolute;
   width: 1263px;
   height: 212px;
@@ -549,20 +549,20 @@ body {
   transform: translateX(-50%);
 }
 
-.beranda .slogan-2 {
+.slogan-2 {
   display: inline-flex;
   align-items: flex-start;
   gap: 49px;
   position: relative;
 }
 
-.beranda .icon-slogan {
+.icon-slogan {
   width: 168.51px;
   position: relative;
   height: 212px;
 }
 
-.beranda .text-wrapper-21 {
+.text-wrapper-21 {
   position: absolute;
   width: 160px;
   top: 178px;
@@ -575,7 +575,7 @@ body {
   line-height: normal;
 }
 
-.beranda .pic-slogan {
+.pic-slogan {
   position: absolute;
   width: 130px;
   height: 130px;
@@ -583,14 +583,14 @@ body {
   transform: translateX(-50%);
 }
 
-.beranda .form-testi {
+.form-testi {
   position: absolute;
   top: 2300px;
   left: 50%;
   margin: 10px;
 }
 
-.beranda .p {
+.p {
   font-weight: 700;
   color: #272042;
   width: 600px;
@@ -603,7 +603,7 @@ body {
   transform: translateX(-50%);
 }
 
-.beranda .input-testi {
+.input-testi {
   left: 0%;
   transform: translateX(-100%);
 }
@@ -619,31 +619,31 @@ body {
   margin-bottom: 5px;
 }
 
-.beranda .rectangle {
+.rectangle {
   width: 600px;
   height: 40px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-.beranda .rectangle-testi {
+.rectangle-testi {
   width: 600px;
   height: 80px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-.beranda .testimoni-anda textarea {
+.testimoni-anda textarea {
   width: 300px;
 }
 
-.beranda .img {
+.img {
   width: 30px;
   height: 30px;
   margin-right: 10px;
 }
 
-.beranda .img-testi{
+.img-testi{
   position: absolute;
   width: 600px;
   height: 400px;
