--- a/css/katalog_style.css
+++ b/css/katalog_style.css
@@ -9,17 +9,17 @@ body {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
-.katalog .div {
+.div {
   background-color: #ffffff;
   width: 1440px;
   height: 5300px;
   position: relative;
 }
 
-.katalog .footer {
+.footer {
   position: absolute;
   width: 1440px;
   height: 252px;
@@ -27,7 +27,7 @@ body {
   left: 0;
 }
 
-.katalog .footer-2 {
+.footer-2 {
   position: absolute;
   width: 1227px;
   height: 182px;
@@ -35,7 +35,7 @@ body {
   left: 113px;
 }
 
-.katalog .menu {
+.menu {
   width: 297px;
   height: 182px;
   left: 304px;
@@ -43,7 +43,7 @@ body {
   top: 0;
 }
 
-.katalog .text-wrapper {
+.text-wrapper {
   position: absolute;
   width: 287px;
   top: 0;
@@ -55,7 +55,7 @@ body {
   line-height: normal;
 }
 
-.katalog .text-wrapper-2 {
+.text-wrapper-2 {
   position: absolute;
   width: 287px;
   top: 48px;
@@ -67,7 +67,7 @@ body {
   line-height: normal;
 }
 
-.katalog .text-wrapper-3 {
+.text-wrapper-3 {
   position: absolute;
   width: 287px;
   top: 122px;
@@ -79,7 +79,7 @@ body {
   line-height: normal;
 }
 
-.katalog .text-wrapper-4 {
+.text-wrapper-4 {
   position: absolute;
   width: 287px;
   top: 85px;
@@ -92,7 +92,7 @@ body {
   text-decoration: underline;
 }
 
-.katalog .text-wrapper-5 {
+.text-wrapper-5 {
   position: absolute;
   width: 287px;
   top: 159px;
@@ -104,7 +104,7 @@ body {
   line-height: normal;
 }
 
-.katalog .logo {
+.logo {
   width: 133px;
   height: 145px;
   top: 14px;
@@ -112,7 +112,7 @@ body {
   left: 0;
 }
 
-.katalog .text-wrapper-6 {
+.text-wrapper-6 {
   position: absolute;
   width: 129px;
   top: 40px;
@@ -124,7 +124,7 @@ body {
   line-height: normal;
 }
 
-.katalog .text-wrapper-7 {
+.text-wrapper-7 {
   top: 0;
   position: absolute;
   left: 0;
@@ -136,7 +136,7 @@ body {
   white-space: nowrap;
 }
 
-.katalog .menu-2 {
+.menu-2 {
   width: 297px;
   height: 182px;
   left: 622px;
@@ -144,7 +144,7 @@ body {
   top: 0;
 }
 
-.katalog .text-wrapper-8 {
+.text-wrapper-8 {
   position: absolute;
   width: 287px;
   top: 85px;
@@ -156,7 +156,7 @@ body {
   line-height: normal;
 }
 
-.katalog .menu-3 {
+.menu-3 {
   width: 295px;
   height: 145px;
   left: 940px;
@@ -164,7 +164,7 @@ body {
   top: 0;
 }
 
-.katalog .line {
+.line {
   position: absolute;
   width: 1440px;
   height: 1px;
@@ -173,7 +173,7 @@ body {
   object-fit: cover;
 }
 
-.katalog .nav-bar {
+.nav-bar {
   position: absolute;
   width: 1240px;
   height: 50px;
@@ -181,7 +181,7 @@ body {
   left: 100px;
 }
 
-.katalog .logo-2 {
+.logo-2 {
   width: 368px;
   height: 35px;
   top: 7px;
@@ -189,7 +189,7 @@ body {
   left: 0;
 }
 
-.katalog .logo-linda {
+.logo-linda {
   position: absolute;
   top: 0;
   left: 62px;
@@ -200,7 +200,7 @@ body {
   line-height: normal;
 }
 
-.katalog .text-wrapper-13 {
+.text-wrapper-13 {
   top: 3px;
   position: absolute;
   left: 0;
@@ -212,7 +212,7 @@ body {
   white-space: nowrap;
 }
 
-.katalog .group {
+.group {
   position: absolute;
   width: 485px;
   height: 27px;
@@ -220,7 +220,7 @@ body {
   left: 541px;
 }
 
-.katalog ul {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -232,17 +232,17 @@ body {
   margin-left: 100px;
 }
 
-.katalog li {
+li {
   float: left;
 }
 
-.katalog li a {
+li a {
   color: #8B8BA5;
   text-align: center;
   text-decoration: none;
 }
 
-.katalog li a:hover:not(.active) {
+li a:hover:not(.active) {
   color: #FBE0DC;
 }
 
@@ -250,11 +250,11 @@ body {
   color: #272042;
 }
 
-.katalog li a:hover, li a.active {
+li a:hover, li a.active {
   color: #FBE0DC;
 }
 
-.katalog .text-wrapper-14 {
+.text-wrapper-14 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -266,7 +266,7 @@ body {
   line-height: normal;
 }
 
-.katalog .text-wrapper-15 {
+.text-wrapper-15 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -279,7 +279,7 @@ body {
 }
 
 /* Content Katalog */
-.katalog .banner {
+.banner {
   position: absolute;
   width: 1262px;
   height: 612px;
@@ -288,7 +288,7 @@ body {
   transform: translateX(-50%);
 }
 
-.katalog .text-wrapper-katalog {
+.text-wrapper-katalog {
   position: absolute;
   font-weight: 700;
   color: #272042;
@@ -298,7 +298,7 @@ body {
   white-space: nowrap;
 }
 
-.katalog .foto-makanan-2 {
+.foto-makanan-2 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -307,14 +307,14 @@ body {
   top: 100px;
 }
 
-.katalog .makanan {
+.makanan {
   position: relative;
   width: 406.51px;
   height: 263px;
   border-radius: 20px;
 }
 
-.katalog .text-wrapper-24 {
+.text-wrapper-24 {
   position: absolute;
   font-weight: 700;
   color: #272042;
@@ -325,7 +325,7 @@ body {
   padding-top: 20px;
 }
 
-.katalog .text-wrapper-25 {
+.text-wrapper-25 {
   position: absolute;
   width: 400px;
   top: 320px;
@@ -360,13 +360,13 @@ body {
   background-color: #AA8E1C;
 }
 
-.katalog .frame-3 {
+.frame-3 {
   position: absolute;
   top: 460px;
   padding-top: 10px;
 }
 
-.katalog .overlap {
+.overlap {
   position: absolute;
   width: 600px;
   height: 985px;
@@ -374,7 +374,7 @@ body {
   left: 224px;
 }
 
-.katalog .cemilan-viral {
+.cemilan-viral {
   position: absolute;
   width: 954px;
   height: 985px;
@@ -382,7 +382,7 @@ body {
   left: 0;
 }
 
-.katalog .text-wrapper-10 {
+.text-wrapper-10 {
   position: absolute;
   width: 600px;
   left: 50%;
@@ -395,7 +395,7 @@ body {
   line-height: 40px;
 }
 
-.katalog .mid-button {
+.mid-button {
   display: inline-flex;
   flex-direction: row;
   align-items: center;
@@ -407,7 +407,7 @@ body {
   top: 160px;
 }
 
-.katalog .katalog-minuman {
+.katalog-minuman {
   position: absolute;
   width: 1262px;
   height: 612px;
@@ -416,7 +416,7 @@ body {
   transform: translateX(-50%);
 }
 
-.katalog .katalog-makanan {
+.katalog-makanan {
   position: absolute;
   width: 1262px;
   height: 612px;
@@ -425,7 +425,7 @@ body {
   transform: translateX(-50%);
 }
 
-.katalog .text-wrapper-minuman, .katalog .text-wrapper-makanan {
+.text-wrapper-minuman, .text-wrapper-makanan {
   position: absolute;
   font-weight: 700;
   color: #272042;
@@ -435,7 +435,7 @@ body {
   white-space: nowrap;
 }
 
-.katalog .foto-katalog-minuman, .katalog .foto-katalog-makanan {
+.foto-katalog-minuman, .foto-katalog-makanan {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -444,7 +444,7 @@ body {
   top: 100px;
 }
 
-.katalog .foto-katalog-minuman-2, .katalog .foto-katalog-makanan-2 {
+.foto-katalog-minuman-2, .foto-katalog-makanan-2 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -453,7 +453,7 @@ body {
   top: 680px;
 }
 
-.katalog .foto-katalog-minuman-3, .katalog .foto-katalog-makanan-3{
+.foto-katalog-minuman-3, .foto-katalog-makanan-3{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -462,14 +462,14 @@ body {
   top: 1260px;
 }
   
-.katalog .list-minuman, .katalog .list-makanan {
+.list-minuman, .list-makanan {
   position: relative;
   width: 250px;
   height: 250px;
   border-radius: 20px;
 }
 
-.katalog .judul-minuman, .katalog .judul-makanan {
+.judul-minuman, .judul-makanan {
   position: absolute;
   font-weight: 700;
   color: #272042;
@@ -480,7 +480,7 @@ body {
   padding-top: 20px;
 }
 
-.katalog .deskripsi-minuman, .katalog .deskripsi-makanan {
+.deskripsi-minuman, .deskripsi-makanan {
   position: absolute;
   width: 270px;
   top: 320px;
@@ -492,7 +492,7 @@ body {
   padding-top: 10px;
 }
 
-.katalog .detail-minuman, .katalog .detail-makanan {
+.detail-minuman, .detail-makanan {
   position: absolute;
   top: 460px;
 }
@@ -530,4 +530,10 @@ body {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 620px) {
+  .katalog {
+    width: 100%;
+  }
 }
