--- a/css/promo_style.css
+++ b/css/promo_style.css
@@ -9,17 +9,17 @@ body {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
-.promo .div {
+ .div {
   background-color: #ffffff;
   width: 1440px;
   height: 2150px;
   position: relative;
 }
 
-.promo .footer {
+ .footer {
   position: absolute;
   width: 1440px;
   height: 252px;
@@ -27,7 +27,7 @@ body {
   left: 0;
 }
 
-.promo .footer-2 {
+ .footer-2 {
   position: absolute;
   width: 1227px;
   height: 182px;
@@ -35,7 +35,7 @@ body {
   left: 113px;
 }
 
-.promo .menu {
+ .menu {
   width: 297px;
   height: 182px;
   left: 304px;
@@ -43,7 +43,7 @@ body {
   top: 0;
 }
 
-.promo .text-wrapper {
+ .text-wrapper {
   position: absolute;
   width: 287px;
   top: 0;
@@ -55,7 +55,7 @@ body {
   line-height: normal;
 }
 
-.promo .text-wrapper-2 {
+ .text-wrapper-2 {
   position: absolute;
   width: 287px;
   top: 48px;
@@ -67,7 +67,7 @@ body {
   line-height: normal;
 }
 
-.promo .text-wrapper-3 {
+ .text-wrapper-3 {
   position: absolute;
   width: 287px;
   top: 122px;
@@ -79,7 +79,7 @@ body {
   line-height: normal;
 }
 
-.promo .text-wrapper-4 {
+ .text-wrapper-4 {
   position: absolute;
   width: 287px;
   top: 85px;
@@ -92,7 +92,7 @@ body {
   text-decoration: underline;
 }
 
-.promo .text-wrapper-5 {
+ .text-wrapper-5 {
   position: absolute;
   width: 287px;
   top: 159px;
@@ -104,7 +104,7 @@ body {
   line-height: normal;
 }
 
-.promo .logo {
+ .logo {
   width: 133px;
   height: 145px;
   top: 14px;
@@ -112,7 +112,7 @@ body {
   left: 0;
 }
 
-.promo .text-wrapper-6 {
+ .text-wrapper-6 {
   position: absolute;
   width: 129px;
   top: 40px;
@@ -124,7 +124,7 @@ body {
   line-height: normal;
 }
 
-.promo .text-wrapper-7 {
+ .text-wrapper-7 {
   top: 0;
   position: absolute;
   left: 0;
@@ -136,7 +136,7 @@ body {
   white-space: nowrap;
 }
 
-.promo .menu-2 {
+ .menu-2 {
   width: 297px;
   height: 182px;
   left: 622px;
@@ -144,7 +144,7 @@ body {
   top: 0;
 }
 
-.promo .text-wrapper-8 {
+ .text-wrapper-8 {
   position: absolute;
   width: 287px;
   top: 85px;
@@ -156,7 +156,7 @@ body {
   line-height: normal;
 }
 
-.promo .menu-3 {
+ .menu-3 {
   width: 295px;
   height: 145px;
   left: 940px;
@@ -164,7 +164,7 @@ body {
   top: 0;
 }
 
-.promo .line {
+ .line {
   position: absolute;
   width: 1440px;
   height: 1px;
@@ -173,7 +173,7 @@ body {
   object-fit: cover;
 }
 
-.promo .nav-bar {
+ .nav-bar {
   position: absolute;
   width: 1240px;
   height: 50px;
@@ -181,7 +181,7 @@ body {
   left: 100px;
 }
 
-.promo .logo-2 {
+ .logo-2 {
   width: 368px;
   height: 35px;
   top: 7px;
@@ -189,7 +189,7 @@ body {
   left: 0;
 }
 
-.promo .logo-linda {
+ .logo-linda {
   position: absolute;
   top: 0;
   left: 62px;
@@ -200,7 +200,7 @@ body {
   line-height: normal;
 }
 
-.promo .text-wrapper-13 {
+ .text-wrapper-13 {
   top: 3px;
   position: absolute;
   left: 0;
@@ -212,7 +212,7 @@ body {
   white-space: nowrap;
 }
 
-.promo .group {
+ .group {
   position: absolute;
   width: 485px;
   height: 27px;
@@ -220,7 +220,7 @@ body {
   left: 541px;
 }
 
-.promo ul {
+ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -232,17 +232,17 @@ body {
   margin-left: 100px;
 }
 
-.promo li {
+ li {
   float: left;
 }
 
-.promo li a {
+ li a {
   color: #8B8BA5;
   text-align: center;
   text-decoration: none;
 }
 
-.promo li a:hover:not(.active) {
+ li a:hover:not(.active) {
   color: #FBE0DC;
 }
 
@@ -250,11 +250,11 @@ body {
   color: #272042;
 }
 
-.promo li a:hover, li a.active {
+ li a:hover, li a.active {
   color: #FBE0DC;
 }
 
-.promo .text-wrapper-14 {
+ .text-wrapper-14 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -266,7 +266,7 @@ body {
   line-height: normal;
 }
 
-.promo .text-wrapper-15 {
+ .text-wrapper-15 {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -279,7 +279,7 @@ body {
 }
 
 /* Content Promo */
-.promo .cek-promo-disini {
+ .cek-promo-disini {
   position: absolute;
   width: 1260px;
   height: 670px;
@@ -287,12 +287,12 @@ body {
   left: 90px;
 }
 
-.promo .katalog-menu {
+ .katalog-menu {
   position: relative;
   height: 670px;
 }
 
-.promo .frame-2 {
+ .frame-2 {
   display: inline-flex;
   align-items: flex-start;
   gap: 100px;
@@ -301,13 +301,13 @@ body {
   left: 0;
 }
 
-.promo .div-2 {
+ .div-2 {
   position: relative;
   width: 581.32px;
   height: 464px;
 }
 
-.promo .frame-3 {
+ .frame-3 {
   top: 414px;
   left: 35px;
   display: inline-flex;
@@ -318,27 +318,27 @@ body {
   position: absolute;
 }
 
-/*.promo .trapezoid-container {
+/* .trapezoid-container {
   width: 581px;
   overflow: hidden;
   position: relative;
   border-radius: 85px 85px 50px 50px;
 }
 
-.promo .trapezoid {
+ .trapezoid {
   width: 100%;
   height: 373px;
   clip-path: polygon(0% 0%, 100% 0%, 95% 100%, 5% 100%);
   overflow: hidden;
 }*/
 
-.promo .img {
+ .img {
   width: 581px;
   object-fit: cover;
   border-radius: 20px;
 }
 
-.promo .div-wrapper {
+ .div-wrapper {
   position: absolute;
   width: 329px;
   height: 90px;
@@ -346,7 +346,7 @@ body {
   left: 8px;
 }
 
-.promo .text-wrapper-12 {
+ .text-wrapper-12 {
   position: absolute;
   top: 9px;
   left: 10px;
@@ -381,7 +381,7 @@ body {
   background-color: #AA8E1C;
 }
 
-.promo .overlap {
+ .overlap {
   position: absolute;
   width: 992px;
   height: 985px;
@@ -389,7 +389,7 @@ body {
   left: 224px;
 }
 
-.promo .promo-besar-besaran {
+ -besar-besaran {
   position: absolute;
   width: 954px;
   height: 985px;
@@ -397,7 +397,7 @@ body {
   left: 0;
 }
 
-.promo .p {
+ .p {
   position: absolute;
   top: -10px;
   left: 50%;
@@ -411,7 +411,7 @@ body {
   white-space: nowrap;
 }
 
-.promo .frame {
+ .frame {
   top: 830px;
   left: 367px;
   display: inline-flex;
@@ -422,13 +422,13 @@ body {
   position: absolute;
 }
 
-.promo .rectangle {
+ .rectangle {
   position: relative;
   width: 259px;
   height: 50px;
 }
 
-.promo .text-wrapper-9 {
+ .text-wrapper-9 {
   position: absolute;
   top: 12px;
   left: 32px;
@@ -440,7 +440,7 @@ body {
   line-height: normal;
 }
 
-.promo .pic {
+ .pic {
   width: 900px;
   height: 500px;
   position: absolute;
@@ -450,7 +450,7 @@ body {
   border-radius: 20px;
 }
 
-.promo .text-wrapper-10 {
+ .text-wrapper-10 {
   position: absolute;
   width: 700px;
   top: 90px;
@@ -464,7 +464,7 @@ body {
   line-height: 30px;
 }
 
-.promo .text-wrapper-11 {
+ .text-wrapper-11 {
   position: absolute;
   width: 700px;
   top: 710px;
@@ -478,10 +478,16 @@ body {
   line-height: 30px;
 }
 
-.promo .cek-promo-disini {
+ .cek-promo-disini {
   position: absolute;
   width: 1260px;
   height: 670px;
   top: 146px;
   left: 90px;
+}
+
+@media only screen and (max-width: 620px) {
+  .promo {
+    width: 100%;
+  }
 }
